# Rustic

./: .gitignore  LICENSE
client/: Cargo.toml
client/src/: io.rs  main.rs  tui.rs
server/: Cargo.toml
server/src/: main.rs
